# netnode

./: .gitignore  main.c  meson.build
.cache/clangd/index/: main.c.9C21D9CC89E387B5.idx  node.c.81D93B49BE77DCB6.idx  node.h.A05ACE5D4D7E3D6A.idx
include/: node.h
src/: node.c
